--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,87 +3,56 @@
 @tailwind utilities;
 
 .navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  height: 52px;
-  box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-  background: white;
+  @apply flex justify-between items-center fixed w-full h-[52px] shadow-sm bg-white
 }
 
 .navbar__logo {
-  color: darkblue;
-  font-size: 18px;
-  font-weight: 600;
-  cursor: pointer;
-  padding: 0px 18px;
+  @apply text-blue-800 text-lg font-semibold cursor-pointer py-0
 }
 
 .navbar__list {
-  padding: 0px 18px;
-  display: flex;
-  gap: 12px;
-  align-items: center;
+  @apply flex py-0 px-[18px] items-center gap-3
 }
 
 .navbar__button {
-  display: none;
-  cursor: pointer;
+  @apply cursor-pointer hidden
 }
 
 .navbar__list--item {
-  cursor: pointer;
+  @apply cursor-pointer
 }
 
 .navbar__list--item:hover {
-  color: darkgray;
+  @apply text-gray-600
 }
 
 .layout {
-  padding-top: 50px;
+  @apply pt-[52px]
 }
 
 @media only screen and (max-width: 600px) {
   .navbar--mobile {
-   position: fixed; 
-   width: 100%;  
-   top:  52px;
-   background-color: darkblue;
-   color: white;
-   height: 100vh;
+   @apply fixed w-full h-screen top-[52px] bg-blue-900  text-white
   }
 
   .navbar__list {
-    display: none;
+    @apply hidden
   }
   .navbar__list--item--mobile {
-    cursor: pointer;
+    @apply cursor-pointer
   }
-  
   .navbar__button {
-    display: block;
-    padding: 0px 18px;
+    @apply block px-[18px] py-0
   }
 
   .navbar__list--mobile {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    align-items:  start;
-    padding: 24px 18px;
+    @apply flex flex-col gap-[16px] px-[18px] py-6
   }
-
   .navbar__list--item--mobile:hover {
-    color: darkgray;
+    @apply text-gray-600
   }
   
   .navbar__list--item--mobile {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
+    @apply flex flex-col gap-[16px]
   }
 }
-
